[package]
edition = "2021"
name = "pool-prover-message"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = "1.1.0"
snarkvm = "0.8.0"
tokio-util = {version = "0.7.1", features = ["codec"]}
